--- a/global.css
+++ b/global.css
@@ -1,4 +1,4 @@
-/*sections of this code were derived from
+git /*sections of this code were derived from
 Bellevue University
 WEB200 Week9 assignment guidelines 
 assignment completed by William Talley
