--- a/global.css
+++ b/global.css
@@ -87,6 +87,9 @@ accessed on: 6/4/2021
 .return-home {
     text-decoration: underline;
     color:#453674;
+    margin-top: 50px;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
 .return-home:hover {
