--- a/week-4/talley-number-game.css
+++ b/week-4/talley-number-game.css
@@ -58,3 +58,22 @@
     border-radius: 4px;
     box-sizing: border-box;
 }
+
+
+#card-results {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+  width: 600px;
+  
+}
+
+#card-results-title {
+    text-align: center;
+    font-size: 2em;
+    color: #4F3674;
+    font-weight: 400;
+}
+
+#card-results-content {
+    padding: 2px 16px;
+}
