--- a/global.css
+++ b/global.css
@@ -20,7 +20,7 @@ accessed on: 6/4/2021
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
-   
+    padding: 10px;
 }
 
 .card-title {
@@ -28,6 +28,7 @@ accessed on: 6/4/2021
     font-size: 2em;
     color: #4F3674;
     font-weight: 400;
+    padding: 10px;
 }
 
 .card-content {
